[package]
name = "bluetooth-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[target.'cfg(windows)'.dependencies.windows]
version = "0.54"
features = [
  "Win32_Foundation",
  "Win32_Devices_Bluetooth",
  "Devices_Bluetooth",
]
